tdf#145043 SwNavigator: Alternate code to fill footnote member list

Done in attempt to reduce lag when a document has many footnotes.
Testing between existing code and this alternate code shows no
significant difference in time required to fill the member list,
ceteris paribus.

Change-Id: I3d8788224de6486dc6a8c6a8e0c590445aad24fb